--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,22 +1,34 @@
-version: "3"
+version: "3.7"
+
 services:
-  servicediscovery:
-    image: "msc-servicediscovery"
+
+  eurekaserver:
+    image: msc-servicediscovery
     ports:
-     - "8761:8761"
+      - "8761:8761"
+    environment:
+      - "PORT=8761"
+
   configserver:
-    image: "msc-configserver"
+    image: msc-configserver
     ports:
-     - "8888:8888"
-    depends_on:
-     - servicediscovery
-  bookws:
-    image: "msc-booksservice"
+      - "8888:8888"
+    environment:
+      - "PORT=8888"
+      - "PROFILE:default"
+      - "GITPASSWORD=.[]/Nvf3388GiT"
+      - "EUREKASERVER_PORT=8761"
+      - "EUREKA_DEFAULT_ZONE=http://eurekaserver:8761/eureka/"
+      - "KEYSTORE_PASSWORD=foobar"
+      - "KEY_PASSWORD=config"
+
+  booksservice:
+    image: msc-booksservice
     ports:
-     - "9002:9002"
-    depends_on:
-     - configserver
-     - servicediscovery
-
-
-
+      - "9010:9010"
+    environment:
+      - "PORT=9010"
+      - "PROFILE=default"
+      - "EUREKASERVER_PORT=8761"
+      - "CONFIGSERVER_PORT=8888"
+      - "EUREKA_DEFAULT_ZONE=http://eurekaserver:8761/eureka/"
